# Kakerou

./: .gitignore  README.md
agent/: Cargo.toml
agent/src/: config.rs  macros.rs  main.rs  schemas.rs  systeminfo.rs
server/: README.md  go.mod  main.go
server/c2/: http.go
server/database/: db.go  helpers.go  operations.go  schemas.go
server/database/sql/: tables.sql
server/handlers/: agent.go  commands.go  handlers.go  implant.go
server/helpers/: helpers.go
