[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
cryptify = "3.1.1"
hostname = "0.4.2"
local-ip-address = "0.6.9"
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.37.2"
tokio = { version = "1.49.0", features = ["full"] }
